update to fit genstar v1.0.3